Fixed position of sidebar collapse button

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,6 +24,7 @@
     flex-direction: column;
     gap: 16px;
     border-radius: 24px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
     .header {
       display: flex;
@@ -34,13 +35,12 @@
       .compress-button {
         width: 30px;
         height: 30px;
-        position: absolute;
-        right: -40px;
         display: flex;
         align-items: center;
         justify-content: center;
-        background: var(--color-charcoal);
+        background: var(--color-blue-steel);
         color: var(--color-white-smoke);
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
       }
     }
 
@@ -119,7 +119,8 @@
 
       .header {
         .compress-button {
-          right: -66px;
+          position: absolute;
+          right: -40px;
         }
       }
 
